k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    name: default
    env: production
